docs/cobblemon-tags/1.4.1/BlocksTags.md
# Block Tags

This file contains tags related to block in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs
- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:all_hanging_signs
- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:aspear_berry
- cobblemon:babiri_berry
- cobblemon:belue_berry
- cobblemon:bluk_berry
- cobblemon:charti_berry
- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:haban_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nanab_berry
- cobblemon:nomel_berry
- cobblemon:occa_berry
- cobblemon:oran_berry
- cobblemon:pamtre_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:pecha_berry
- cobblemon:persim_berry
- cobblemon:petaya_berry
- cobblemon:pinap_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rawst_berry
- cobblemon:razz_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:shuca_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:tanga_berry
- cobblemon:touga_berry
- cobblemon:wacan_berry
- cobblemon:watmel_berry
- cobblemon:wepear_berry
- cobblemon:wiki_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_replaceable</summary>

- #minecraft:leaves
- minecraft:air
- minecraft:cave_air
- minecraft:dead_bush
- minecraft:fern
- minecraft:fire
- minecraft:glow_lichen
- minecraft:grass
- minecraft:large_fern
- minecraft:light
- minecraft:snow
- minecraft:soul_fire
- minecraft:structure_void
- minecraft:tall_grass
- minecraft:vine
- minecraft:void_air

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_soil</summary>

- #c:farmlands
- #forge:farmlands
- minecraft:farmland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_wild_soil</summary>

- #cobblemon:snow_block
- #minecraft:dirt
- #minecraft:sand

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:crops</summary>

- #cobblemon:mints
- cobblemon:medicinal_leek
- cobblemon:revival_herb
- cobblemon:vivichoke_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_growable</summary>

- cobblemon:dripstone_moon_stone_ore
- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- #cobblemon:small_flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:medicinal_leek_plantable</summary>

- #minecraft:slabs
- minecraft:water

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:blue_mint
- cobblemon:cyan_mint
- cobblemon:green_mint
- cobblemon:pink_mint
- cobblemon:red_mint
- cobblemon:white_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots</summary>

- cobblemon:big_root
- cobblemon:energy_root

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots_spreadable</summary>

- #c:cobblestone
- #c:dirt
- #c:stone
- #forge:cobblestone/deepslate
- #forge:cobblestone/infested
- #forge:cobblestone/mossy
- #forge:cobblestone/normal
- #forge:stone
- #minecraft:dirt
- minecraft:andesite
- minecraft:cobbled_deepslate
- minecraft:cobblestone
- minecraft:deepslate
- minecraft:diorite
- minecraft:granite
- minecraft:infested_cobblestone
- minecraft:infested_deepslate
- minecraft:infested_stone
- minecraft:mossy_cobblestone
- minecraft:stone
- minecraft:tuff

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sees_sky</summary>

- #minecraft:climbable
- #minecraft:fences
- #minecraft:leaves
- #minecraft:replaceable
- minecraft:ice

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:standing_signs
- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:snow_block</summary>

- minecraft:snow_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- cobblemon:apricorn_wall_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- cobblemon:apricorn_wall_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:all_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:all_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bee_growables</summary>

- #cobblemon:apricorns
- #cobblemon:crops

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:drip_stone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fence_gates</summary>

- cobblemon:apricorn_fence_gate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- #cobblemon:flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hoes</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:maintains_farmland</summary>

- #cobblemon:berries
- #cobblemon:crops

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_iron_tool</summary>

- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_stone_tool</summary>

- cobblemon:dawn_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:ice_stone_ore
- cobblemon:leaf_stone_ore
- cobblemon:moon_stone_ore
- cobblemon:shiny_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:thunder_stone_ore
- cobblemon:water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- #cobblemon:small_flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- #cobblemon:standing_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>

<details>
<summary><b>Tag:</b> #mineable:axe</summary>

- #cobblemon:apricorns
- cobblemon:pasture

</details>

<details>
<summary><b>Tag:</b> #mineable:hoe</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #mineable:pickaxe</summary>

- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:healing_machine
- cobblemon:ice_stone_ore
- cobblemon:leaf_stone_ore
- cobblemon:moon_stone_ore
- cobblemon:pc
- cobblemon:shiny_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:thunder_stone_ore
- cobblemon:water_stone_ore

</details>
