docs/cobblemon-tags/1.5.2/BlocksTags.md
# Block Tags

This file contains tags related to blocks in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs
- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:signs
- #cobblemon:all_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:pecha_berry
- cobblemon:rawst_berry
- cobblemon:aspear_berry
- cobblemon:oran_berry
- cobblemon:persim_berry
- cobblemon:razz_berry
- cobblemon:bluk_berry
- cobblemon:nanab_berry
- cobblemon:wepear_berry
- cobblemon:pinap_berry
- cobblemon:leppa_berry
- cobblemon:lum_berry
- cobblemon:figy_berry
- cobblemon:wiki_berry
- cobblemon:mago_berry
- cobblemon:aguav_berry
- cobblemon:iapapa_berry
- cobblemon:sitrus_berry
- cobblemon:touga_berry
- cobblemon:cornn_berry
- cobblemon:magost_berry
- cobblemon:rabuta_berry
- cobblemon:nomel_berry
- cobblemon:enigma_berry
- cobblemon:pomeg_berry
- cobblemon:kelpsy_berry
- cobblemon:qualot_berry
- cobblemon:hondew_berry
- cobblemon:grepa_berry
- cobblemon:tamato_berry
- cobblemon:spelon_berry
- cobblemon:pamtre_berry
- cobblemon:watmel_berry
- cobblemon:durin_berry
- cobblemon:belue_berry
- cobblemon:kee_berry
- cobblemon:maranga_berry
- cobblemon:hopo_berry
- cobblemon:liechi_berry
- cobblemon:ganlon_berry
- cobblemon:salac_berry
- cobblemon:petaya_berry
- cobblemon:apicot_berry
- cobblemon:lansat_berry
- cobblemon:starf_berry
- cobblemon:micle_berry
- cobblemon:custap_berry
- cobblemon:jaboca_berry
- cobblemon:rowap_berry
- cobblemon:babiri_berry
- cobblemon:charti_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:haban_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:occa_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:shuca_berry
- cobblemon:tanga_berry
- cobblemon:wacan_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_replaceable</summary>

- minecraft:air
- minecraft:grass
- minecraft:fern
- minecraft:dead_bush
- minecraft:fire
- minecraft:soul_fire
- minecraft:snow
- minecraft:vine
- minecraft:glow_lichen
- minecraft:light
- minecraft:tall_grass
- minecraft:large_fern
- minecraft:structure_void
- minecraft:void_air
- minecraft:cave_air
- #minecraft:leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_soil</summary>

- minecraft:farmland
- #c:farmlands
- #forge:farmlands

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berry_wild_soil</summary>

- #minecraft:dirt
- #minecraft:sand
- #minecraft:terracotta
- #cobblemon:snow_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestones</summary>

- cobblemon:small_budding_black_tumblestone
- cobblemon:medium_budding_black_tumblestone
- cobblemon:large_budding_black_tumblestone
- cobblemon:black_tumblestone_cluster
- cobblemon:black_tumblestone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:crops</summary>

- cobblemon:revival_herb
- cobblemon:vivichoke_seeds
- cobblemon:medicinal_leek
- #cobblemon:mints

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dawn_stone_ores</summary>

- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_growable</summary>

- dripstone_block
- cobblemon:dripstone_moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dripstone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dusk_stone_ores</summary>

- cobblemon:dusk_stone_ore
- cobblemon:deepslate_dusk_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fire_stone_ores</summary>

- cobblemon:fire_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:nether_fire_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- #cobblemon:small_flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossil_machine_parts</summary>

- cobblemon:restoration_tank
- cobblemon:monitor
- cobblemon:fossil_analyzer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ice_stone_ores</summary>

- cobblemon:ice_stone_ore
- cobblemon:deepslate_ice_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaf_stone_ores</summary>

- cobblemon:leaf_stone_ore
- cobblemon:deepslate_leaf_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:machines</summary>

- cobblemon:healing_machine
- cobblemon:pc
- cobblemon:pasture
- cobblemon:restoration_tank
- cobblemon:monitor
- cobblemon:fossil_analyzer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:medicinal_leek_plantable</summary>

- minecraft:water
- #minecraft:slabs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:red_mint
- cobblemon:blue_mint
- cobblemon:cyan_mint
- cobblemon:pink_mint
- cobblemon:green_mint
- cobblemon:white_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:moon_stone_ores</summary>

- cobblemon:moon_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:dripstone_moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestones</summary>

- cobblemon:small_budding_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:large_budding_tumblestone
- cobblemon:tumblestone_cluster
- cobblemon:tumblestone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots</summary>

- cobblemon:big_root
- cobblemon:energy_root

</details>

<details>
<summary><b>Tag:</b> #cobblemon:roots_spreadable</summary>

- #minecraft:dirt
- minecraft:stone
- minecraft:infested_stone
- minecraft:andesite
- minecraft:diorite
- minecraft:granite
- minecraft:deepslate
- minecraft:infested_deepslate
- minecraft:tuff
- minecraft:cobblestone
- minecraft:mossy_cobblestone
- minecraft:infested_cobblestone
- minecraft:cobbled_deepslate
- #c:dirt
- #c:stone
- #c:cobblestone
- #forge:stone
- #forge:cobblestone/normal
- #forge:cobblestone/mossy
- #forge:cobblestone/infested
- #forge:cobblestone/deepslate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sees_sky</summary>

- #minecraft:replaceable
- #minecraft:leaves
- #minecraft:climbable
- #minecraft:fences
- minecraft:ice

</details>

<details>
<summary><b>Tag:</b> #cobblemon:shiny_stone_ores</summary>

- cobblemon:shiny_stone_ore
- cobblemon:deepslate_shiny_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:standing_signs
- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestones</summary>

- cobblemon:small_budding_sky_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:large_budding_sky_tumblestone
- cobblemon:sky_tumblestone_cluster
- cobblemon:sky_tumblestone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:snow_block</summary>

- minecraft:snow_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sun_stone_ores</summary>

- cobblemon:sun_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:terracotta_sun_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:thunder_stone_ores</summary>

- cobblemon:thunder_stone_ore
- cobblemon:deepslate_thunder_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestone_heat_source</summary>

- minecraft:lava
- minecraft:magma_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- cobblemon:apricorn_wall_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- cobblemon:apricorn_wall_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:water_stone_ores</summary>

- cobblemon:water_stone_ore
- cobblemon:deepslate_water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_hanging_signs</summary>

- #cobblemon:all_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:all_signs</summary>

- #cobblemon:all_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bee_growables</summary>

- #cobblemon:crops
- #cobblemon:apricorns

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ceiling_hanging_signs</summary>

- #cobblemon:ceiling_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:drip_stone_replaceables</summary>

- dripstone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fence_gates</summary>

- cobblemon:apricorn_fence_gate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- #cobblemon:flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:guarded_by_piglins</summary>

- cobblemon:gilded_chest
- cobblemon:black_gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:green_gilded_chest
- cobblemon:pink_gilded_chest
- cobblemon:white_gilded_chest
- cobblemon:yellow_gilded_chest
- cobblemon:relic_coin_pouch
- cobblemon:relic_coin_sack

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hoes</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- cobblemon:apricorn_log
- cobblemon:stripped_apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- cobblemon:apricorn_log
- cobblemon:stripped_apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:maintains_farmland</summary>

- #cobblemon:berries
- #cobblemon:crops

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_iron_tool</summary>

- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:needs_stone_tool</summary>

- cobblemon:dawn_stone_ore
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:ice_stone_ore
- cobblemon:leaf_stone_ore
- cobblemon:moon_stone_ore
- cobblemon:shiny_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:thunder_stone_ore
- cobblemon:water_stone_ore
- cobblemon:dripstone_moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:saplings</summary>

- cobblemon:black_apricorn_sapling
- cobblemon:blue_apricorn_sapling
- cobblemon:green_apricorn_sapling
- cobblemon:pink_apricorn_sapling
- cobblemon:red_apricorn_sapling
- cobblemon:white_apricorn_sapling
- cobblemon:yellow_apricorn_sapling

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:small_flowers</summary>

- #cobblemon:small_flowers

</details>

<details>
<summary><b>Tag:</b> #cobblemon:standing_signs</summary>

- #cobblemon:standing_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_hanging_signs</summary>

- #cobblemon:wall_hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wall_signs</summary>

- #cobblemon:wall_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>

<details>
<summary><b>Tag:</b> #mineable:axe</summary>

- #cobblemon:apricorns
- cobblemon:pasture
- cobblemon:gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:yellow_gilded_chest
- cobblemon:pink_gilded_chest
- cobblemon:black_gilded_chest
- cobblemon:white_gilded_chest
- cobblemon:green_gilded_chest
- cobblemon:gimmighoul_chest

</details>

<details>
<summary><b>Tag:</b> #mineable:hoe</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #mineable:pickaxe</summary>

- cobblemon:dawn_stone_ore
- cobblemon:dusk_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:ice_stone_ore
- cobblemon:leaf_stone_ore
- cobblemon:moon_stone_ore
- cobblemon:shiny_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:thunder_stone_ore
- cobblemon:water_stone_ore
- cobblemon:deepslate_dawn_stone_ore
- cobblemon:deepslate_dusk_stone_ore
- cobblemon:deepslate_fire_stone_ore
- cobblemon:deepslate_ice_stone_ore
- cobblemon:deepslate_leaf_stone_ore
- cobblemon:deepslate_moon_stone_ore
- cobblemon:deepslate_shiny_stone_ore
- cobblemon:deepslate_sun_stone_ore
- cobblemon:deepslate_thunder_stone_ore
- cobblemon:deepslate_water_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:nether_fire_stone_ore
- cobblemon:terracotta_sun_stone_ore
- cobblemon:healing_machine
- cobblemon:pc
- cobblemon:restoration_tank
- cobblemon:monitor
- cobblemon:fossil_analyzer
- cobblemon:tumblestone_block
- cobblemon:black_tumblestone_block
- cobblemon:sky_tumblestone_block
- cobblemon:small_budding_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:large_budding_tumblestone
- cobblemon:tumblestone_cluster
- cobblemon:small_budding_black_tumblestone
- cobblemon:medium_budding_black_tumblestone
- cobblemon:large_budding_black_tumblestone
- cobblemon:black_tumblestone_cluster
- cobblemon:small_budding_sky_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:large_budding_sky_tumblestone
- cobblemon:sky_tumblestone_cluster

</details>
